packages/rdml/src/snapshots/rdml__tests__parse_if.snap
---
source: packages/rdml/src/lib.rs
expression: result
---
Nodes {
    nodes: [
        Node {
            attrs: [],
            node: If(
                IfNode {
                    if_token: If,
                    cond: Expr::Path {
                        attrs: [],
                        qself: None,
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        condition,
                                    ),
                                    arguments: PathArguments::None,
                                },
                            ],
                        },
                    },
                    then_branch: Block {
                        brace_token: Brace,
                        nodes: [
                            Node {
                                attrs: [],
                                node: Text(
                                    LitStr {
                                        token: "if body",
                                    },
                                ),
                            },
                        ],
                    },
                    else_branch: None,
                },
            ),
        },
        Node {
            attrs: [],
            node: If(
                IfNode {
                    if_token: If,
                    cond: Expr::Binary {
                        attrs: [],
                        left: Expr::Path {
                            attrs: [],
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            condition,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                        op: BinOp::And(
                            AndAnd,
                        ),
                        right: Expr::Path {
                            attrs: [],
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            else_block,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                    },
                    then_branch: Block {
                        brace_token: Brace,
                        nodes: [
                            Node {
                                attrs: [],
                                node: Text(
                                    LitStr {
                                        token: "if body",
                                    },
                                ),
                            },
                        ],
                    },
                    else_branch: Some(
                        (
                            Else,
                            Else(
                                Block {
                                    brace_token: Brace,
                                    nodes: [
                                        Node {
                                            attrs: [],
                                            node: Text(
                                                LitStr {
                                                    token: "else body",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ),
                    ),
                },
            ),
        },
        Node {
            attrs: [],
            node: If(
                IfNode {
                    if_token: If,
                    cond: Expr::Binary {
                        attrs: [],
                        left: Expr::Path {
                            attrs: [],
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            condition,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                        op: BinOp::And(
                            AndAnd,
                        ),
                        right: Expr::Path {
                            attrs: [],
                            qself: None,
                            path: Path {
                                leading_colon: None,
                                segments: [
                                    PathSegment {
                                        ident: Ident(
                                            else_block,
                                        ),
                                        arguments: PathArguments::None,
                                    },
                                ],
                            },
                        },
                    },
                    then_branch: Block {
                        brace_token: Brace,
                        nodes: [
                            Node {
                                attrs: [],
                                node: Text(
                                    LitStr {
                                        token: "if body",
                                    },
                                ),
                            },
                        ],
                    },
                    else_branch: Some(
                        (
                            Else,
                            If(
                                IfNode {
                                    if_token: If,
                                    cond: Expr::Binary {
                                        attrs: [],
                                        left: Expr::Path {
                                            attrs: [],
                                            qself: None,
                                            path: Path {
                                                leading_colon: None,
                                                segments: [
                                                    PathSegment {
                                                        ident: Ident(
                                                            condition,
                                                        ),
                                                        arguments: PathArguments::None,
                                                    },
                                                ],
                                            },
                                        },
                                        op: BinOp::And(
                                            AndAnd,
                                        ),
                                        right: Expr::Path {
                                            attrs: [],
                                            qself: None,
                                            path: Path {
                                                leading_colon: None,
                                                segments: [
                                                    PathSegment {
                                                        ident: Ident(
                                                            else_if_block,
                                                        ),
                                                        arguments: PathArguments::None,
                                                    },
                                                ],
                                            },
                                        },
                                    },
                                    then_branch: Block {
                                        brace_token: Brace,
                                        nodes: [
                                            Node {
                                                attrs: [],
                                                node: Text(
                                                    LitStr {
                                                        token: "else if body",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    else_branch: Some(
                                        (
                                            Else,
                                            Else(
                                                Block {
                                                    brace_token: Brace,
                                                    nodes: [
                                                        Node {
                                                            attrs: [],
                                                            node: Text(
                                                                LitStr {
                                                                    token: "else body",
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ),
                    ),
                },
            ),
        },
    ],
}
